# Deep-Learning-Based-FPGA-CPU-Acceleration

CNN_C++/: CMakeLists.txt  CNNFunctions.hpp  main.cpp
CNN_PyTorch/: AddressOracle.py  best_model.pt  main.py
CNN_Vivado_HLS/CNN_Vivado/: .cproject  (+3 more)
LoopSim_C++/: CMakeLists.txt
LoopSim_C++/src/: CPU_sim.cpp  CPU_sim.hpp  LT16memorymodel.cpp  LT16memorymodel.h  instruction_cells.cpp  instruction_cells.hpp  loop_gen.cpp  loop_gen.hpp  main.cpp  main.hpp  memport.h
LoopSim_C++/src/assembler/inc/: check.h  global.h  handle.h  label.h  msg.h  output.h
LoopSim_C++/src/assembler/src/: asm.l  asm.y  check.c  handle_o.c  handle_oi.c  handle_om.c  handle_omi.c  handle_omr.c  handle_omr2.c  handle_or.c  handle_or2.c  handle_or2i.c  handle_or3.c  handle_ori.c  label.c  msg.c  output.c
dataset/: 0_l_id10_l_type0_n_loops21_n_arrays1_head14_tail32.csv  0_l_id11_l_type1_n_loops51_n_arrays2_head12_tail44.csv  0_l_id13_l_type0_n_loops5_n_arrays5_head14_tail72.csv  0_l_id14_l_type1_n_loops34_n_arrays2_head12_tail44.csv  0_l_id15_l_type1_n_loops19_n_arrays2_head12_tail44.csv  0_l_id16_l_type2_n_loops13_n_arrays2_head10_tail34.csv  0_l_id17_l_type3_n_loops7_n_arrays1_head20_tail314.csv  0_l_id18_l_type0_n_loops7_n_arrays4_head14_tail62.csv  0_l_id1_l_type2_n_loops10_n_arrays6_head10_tail66.csv  0_l_id21_l_type1_n_loops17_n_arrays2_head12_tail44.csv  0_l_id22_l_type2_n_loops48_n_arrays2_head10_tail34.csv  0_l_id24_l_type2_n_loops51_n_arrays2_head10_tail34.csv  0_l_id30_l_type3_n_loops10_n_arrays1_head20_tail318.csv  0_l_id31_l_type2_n_loops45_n_arrays2_head10_tail34.csv  0_l_id32_l_type3_n_loops4_n_arrays1_head20_tail322.csv  0_l_id33_l_type3_n_loops27_n_arrays1_head20_tail508.csv  (+84 more)
(+131 files in other folders)
